--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,6 +1,39 @@
-html,
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 100%;
-    padding-top: 40px;
+	height: 100%;
+	padding-top: 70px;
+	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	line-height: 1.4em;
+	background: #eaeaea;
+	margin: 0 auto;
+}
+
+.messages {
+	background: white;
+	width: 520px;
+}
+ul {
+	list-style: none;
+}
+
+li {
+	position: relative;
+	font-size: 16px;
+	padding: 5px;
+	border-bottom: 1px dotted #ccc;
+}
+
+li:last-child {
+	border-bottom: none;
+}
+
+li time {
+	font-size: 12px;
+	padding-bottom: 20px;
+}
+
+form, .error {
+	padding: 30px;
+	margin-bottom: 50px;
+	position: relative;
+	background: white;
 }
