Can create characters. Added class to character table.

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="jumbotron">
-    <h1>Welcome to pathmanager</h1>
+    <h1>Pathmanager</h1>
   </div>
 
 
