--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -37,3 +37,18 @@ form, .error {
 	position: relative;
 	background: white;
 }
+
+th, td {
+    padding: 5px;
+}
+
+table tr:nth-child(even) {
+    background-color: #eee;
+}
+table tr:nth-child(odd) {
+    background-color: #fff;
+}
+table th {
+    color: white;
+    background-color: black;
+}
